--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,8 +49,22 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="100dp"
+                        android:layout_marginTop="10dp"
                         android:orientation="vertical">
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:layout_width="200dp"
+                            android:layout_height="200dp"
+                            android:src="@drawable/agus_susilo" />
+                        <TextView
+                            android:textStyle="bold"
+                            android:textColor="#000"
+                            android:textSize="18sp"
+                            android:layout_marginTop="5dp"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Agus Susilo"/>
 
                         <TextView
                             android:id="@+id/title"
@@ -82,12 +96,7 @@
 
             </RelativeLayout>
 
-            <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="90dp"
-                android:src="@drawable/logo" />
+
 
         </RelativeLayout>
     </ScrollView>
